Canary_ReqTimeOut/q.Canary_L7_ReqTimeOut.internet-router/ingress/hello-app-sm-enabled-ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-sm-enabled-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: sample-nginx
    #cert-manager.io/cluster-issuer: letsencrypt-prod   
spec:
  rules:
  - host: "hello-clusterip.tetarwal.de"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-app-sm-enabled-svc
            port:
              number: 8080
